2005-12-07  Felix Riemann  <felix@hsgheli.de>

	* disks.glade.in: Use yes-no stock icons instead of check boxes for
	cdrom capabilites

2005-11-28  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.4.1

2005-09-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.4.0

2005-08-23  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.92

2005-08-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.2

2005-08-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* services.glade.in: small string change

2005-07-26  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.1

2005-07-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.glade.in: fix separation of buttons in the DNS tab

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.0.1

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.3.0

2005-07-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* common.glade.in: remove GTK_WIN_POS_CENTER from the password dialog
	* services.glade.in: changed GUI

2005-06-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.glade.in: added an option for wireless key type

2005-04-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* boot.glade.in, common.glade.in: Applied string suggestions from 
	Kjartan. Fixes #301301 and #301302

2005-04-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network.glade.in: remove duplicate accelerators. Fixes #171088

2005-04-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* time.glade.in: set focus target for "time" label

2005-04-12  Michael Vogt  <michael.vogt@ubuntu.com>

	* network.glade.in: Added option for using the peer DNS in dialup
	connections

2005-03-07  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.2.0

2005-03-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1.92

2005-02-25  Carlos Garnacho Parro  <carlosg@gnome.org>

	* users.glade.in: add hidden text field for the "other data" field in