@@ -5,4 +5,5 @@
   <name>GNOME System Tools</name>
   <program_name>users</program_name>
   <pixmaps_directory>../pixmaps</pixmaps_directory>
+  <gnome_support>FALSE</gnome_support>
 </glade-project>
