@@ -1,3 +1,7 @@
+2006-09-25  Carlos Garnacho  <carlosg@gnome.org>
+
+	* users.glade.in: fix typo in profiles edition dialog.
+
 2005-12-07  Felix Riemann  <felix@hsgheli.de>
 
 	* disks.glade.in: Use yes-no stock icons instead of check boxes for
